--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@
 @import url('/css/font.css');
 
 :root {
-    --surface-0: lightblue;
+    --surface-0: #f5f5f5;
+    --surface-1: lightblue;
+    --padding-block: 0.25rem;
+    --padding-inline: 0.5rem;
     --font-size: 1.5rem;
 }
 
@@ -19,7 +22,18 @@ body {
     letter-spacing: 0.05rem;
     grid-template-rows: auto 1fr auto;
     line-height: 2;
-    padding: 0.25rem 0.5rem;
+}
+
+body>*:first-child {
+    padding-block-start: var(--padding-block);
+}
+
+body>* {
+    padding-inline: var(--padding-inline);
+}
+
+body>*:last-child {
+    padding-block-end: var(--padding-block);
 }
 
 a {
@@ -29,11 +43,13 @@ a {
 
 header {
     --nav-gap: 3rem;
+    background-color: var(--surface-1);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     display: grid;
     gap: var(--nav-gap);
     grid-template-columns: 1fr;
-    width: 100%;
     text-align: center;
+    width: 100%;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -71,14 +87,16 @@ header h1 {
 
 main {
     --block-padding: 5rem;
-    padding-block-end: var(--block-padding);
+    display: flex;
+    flex-direction: column;
+    gap: var(--block-padding);
+    padding-block: var(--block-padding);
 }
 
 main section {
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding-block-start: var(--block-padding);
     text-align: center;
 }
 
